# ShieldBuntu

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile
apps/server/: .env.example  README.md  alembic.ini  pyproject.toml
apps/server/alembic/: env.py  script.py.mako
apps/server/alembic/versions/: 20260525_1144_8bbed8a27ee6_initial_schema.py  20260525_1206_a685ccec5d1d_add_auth_session.py  20260525_1500_c3a912f04711_runs_schema_upgrade.py
apps/server/ansible/: ansible.cfg  requirements.yml
apps/server/ansible/inventory/: localhost.yml
apps/server/ansible/playbooks/: apply.yml  check.yml  revert.yml
apps/server/ansible/roles/apparmor/: shieldbuntu.yml
apps/server/ansible/roles/apparmor/defaults/: main.yml
apps/server/ansible/roles/apparmor/meta/: main.yml
apps/server/ansible/roles/apparmor/tasks/: main.yml  revert.yml
apps/server/ansible/roles/audit/: shieldbuntu.yml
apps/server/ansible/roles/audit/defaults/: main.yml
apps/server/ansible/roles/audit/meta/: main.yml
apps/server/ansible/roles/audit/tasks/: main.yml  revert.yml
apps/server/ansible/roles/auto-updates/: shieldbuntu.yml
apps/server/ansible/roles/auto-updates/defaults/: main.yml
apps/server/ansible/roles/auto-updates/meta/: main.yml
apps/server/ansible/roles/auto-updates/tasks/: main.yml  revert.yml
apps/server/ansible/roles/clamav/: shieldbuntu.yml
apps/server/ansible/roles/fail2ban/: shieldbuntu.yml
apps/server/ansible/roles/firewall/: shieldbuntu.yml
apps/server/ansible/roles/grub-password/: shieldbuntu.yml
apps/server/ansible/roles/kernel/: shieldbuntu.yml
apps/server/ansible/roles/no-exec/: shieldbuntu.yml
apps/server/ansible/roles/rkhunter/: shieldbuntu.yml
apps/server/ansible/roles/session-timeout/: shieldbuntu.yml
apps/server/ansible/roles/ssh/: shieldbuntu.yml
apps/server/ansible/roles/tor-blocking/: shieldbuntu.yml
apps/server/ansible/roles/uac/: shieldbuntu.yml
apps/server/ansible/roles/unused-packages/: shieldbuntu.yml
apps/server/ansible/roles/usb-control/: shieldbuntu.yml
apps/server/src/shieldbuntu/: __init__.py  __main__.py  main.py
apps/server/src/shieldbuntu/api/: auth.py  deps.py  health.py  runs.py  tasks.py
apps/server/src/shieldbuntu/core/: auth.py  config.py  db.py  logging.py  startup.py
apps/server/src/shieldbuntu/engine/: __init__.py  discovery.py  events.py  orchestrator.py  runner.py
apps/server/src/shieldbuntu/models/: __init__.py  auth.py  run.py  task.py
apps/server/src/shieldbuntu/scripts/: truncate_db.py
apps/server/tests/: conftest.py  test_ansible_syntax.py  test_api_auth.py  test_api_runs.py  test_api_tasks.py  test_db.py  test_discovery.py  test_events.py  test_health.py
packaging/: README.md
(+132 files in other folders)
