[project]
name = "shieldbuntu-server"
version = "0.2.0"
description = "ShieldBuntu hardening service — FastAPI + Ansible engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "Akshat Pandey" }]

# All lower bounds set to latest stable as of 2026-05-25.
# Exact versions are pinned in uv.lock; `uv lock --upgrade` to refresh.
dependencies = [
  "fastapi>=0.136.3",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "sqlmodel>=0.0.38",
  "sqlalchemy[asyncio]>=2.0.50",
  "alembic>=1.18.4",
  "aiosqlite>=0.22.1",
  "ansible-runner>=2.4.3",
  "ansible-core>=2.21.0",
  "structlog>=25.5.0",
  "uvicorn[standard]>=0.48.0",
  "httpx>=0.28.1",
  "python-pam>=2.0.2",
  "bcrypt>=5.0.0",
  "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.14",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "anyio>=4.11.0",
]

[project.scripts]
shieldbuntu-server = "shieldbuntu.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shieldbuntu"]

[tool.uv]
package = true

# ----- Ruff -----
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".venv", "ansible/artifacts"]

[tool.ruff.lint]
select = [
  "E", "W",       # pycodestyle
  "F",            # pyflakes
  "I",            # isort
  "B",            # bugbear
  "C4",           # comprehensions
  "UP",           # pyupgrade
  "N",            # pep8-naming
  "ASYNC",        # async correctness
  "S",            # bandit (security)
  "RUF",          # ruff-specific
  "SIM",          # simplify
  "TID",          # tidy imports
  "PL",           # pylint
  "ANN",          # type annotations
  "PT",           # pytest style
  "RET",          # return statements
  "PTH",          # pathlib over os.path
]
ignore = [
  "PLR0913",      # too many arguments — fine for API endpoints
  "PLR2004",      # magic values — too noisy
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004", "S"]

[tool.ruff.format]
quote-style = "double"

# ----- Pytest -----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

# ----- Coverage -----
[tool.coverage.run]
source = ["src/shieldbuntu"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
